# 2023-entries-zkbridge

./: README.md
designated/ExampleTeam_1_2/: README.md
designated/ExampleTeam_1_2/framework/: package-lock.json  tsconfig.json
designated/Extropy_2_1/: README.md
designated/Extropy_2_1/docs/: Overview.md  SSZ.md
designated/Extropy_2_1/src/: BatchVerifier.sol  MerkleLib.sol  SSZ.sol  Updater.sol  Verifier.sol
designated/Extropy_2_1/test/: Updater.t.sol
designated/Keccak256_In_Gnark_1_8/: README.md  geth_keccak.go  go.mod  go.sum  keccak.go  keccak_test.go  uint64api.go
designated/OURoc_1_11_BSC_Header_Verification/: README.md
designated/OURoc_1_11_BSC_Header_Verification/framework/: package.json
designated/OURoc_1_2_RLP_serialization/: .gitignore  README.md  package-lock.json
designated/OURoc_1_3_Ecrecover_for_ECDSA/: README.md  package-lock.json
designated/OURoc_1_3_Ecrecover_for_ECDSA/circuits/: bigint.circom  bigint_func.circom  ecdsa.circom  secp256k1.circom  secp256k1_func.circom
designated/OURoc_1_3_Ecrecover_for_ECDSA/test/: bigint.test.ts  ecdsa.test.ts  test.ipynb
designated/OURoc_1_8_Keccak-256/: README.md  package.json
designated/OURoc_1_8_Keccak-256/circuits/: keccak.circom  utils.circom
designated/OURoc_1_8_Keccak-256/test/: keccak-intermediate.js  keccak.js
designated/TuringBridge_3_1/: .gitignore  README.md
designated/TuringBridge_3_1/eth-helper/: Cargo.toml
designated/TuringBridge_3_1/eth2gnosis/: Cargo.toml
designated/zk-world_6/: README.md
self-selected/ExampleSelfSelected/: README.md
(+30 files in other folders)
